# apxctrl

./: .gitattributes  .gitignore  README.md  apx_controller.py  client_example.py  main.py  models.py  pyproject.toml  test-project.approjx  test_smoke.py
apx_aux_ctrl/: apx_aux_ctrl.ino
apxctrl/: __init__.py  client.py  controller.py  model.py  server.py
tests/: test_smoke.py
