[project]
name = "apxctrl"
version = "0.4.0"
description = "APx500 Control Server - Remote control for Audio Precision test equipment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pydantic>=2.0.0",
    "pythonnet>=3.0.5",
]

[project.scripts]
apxctrl = "main:main"
