[project]
name = "apxctrl"
version = "0.5.0"
description = "APx500 Control Server - Remote control for Audio Precision test equipment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pydantic>=2.0.0",
    "pythonnet>=3.0.5",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
apxctrl = "apxctrl.server:main"
apxctrl-client = "apxctrl.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
